--- a/Metrol/Metrol.dproj
+++ b/Metrol/Metrol.dproj
@@ -77,10 +77,10 @@
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <DCC_RangeChecking>true</DCC_RangeChecking>
         <UsePackages>true</UsePackages>
-        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=2.1.0.204;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=2.1.0.206;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
         <VerInfo_MajorVer>2</VerInfo_MajorVer>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
-        <VerInfo_Build>204</VerInfo_Build>
+        <VerInfo_Build>206</VerInfo_Build>
         <Debugger_HostApplication>C:\XE\Projects\Device2\_exe\Debug\WorkProg.exe</Debugger_HostApplication>
         <DCC_MapFile>3</DCC_MapFile>
         <VerInfo_DLL>true</VerInfo_DLL>
@@ -117,8 +117,8 @@
         <DCCReference Include="MetrBK.pas">
             <Form>FormBK</Form>
         </DCCReference>
-        <DCCReference Include="MetrNNK.pas">
-            <Form>FormNNK</Form>
+        <DCCReference Include="MetrGGKP.pas">
+            <Form>FormGGKP</Form>
         </DCCReference>
         <DCCReference Include="..\VTEditors.pas"/>
         <DCCReference Include="MetrUAKI.pas">
@@ -175,6 +175,10 @@
         </DCCReference>
         <DCCReference Include="MetrGK.pas">
             <Form>FormGK</Form>
+            <FormType>dfm</FormType>
+        </DCCReference>
+        <DCCReference Include="MetrNNK.pas">
+            <Form>FormNNK</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
