--- a/Core/Core.dproj
+++ b/Core/Core.dproj
@@ -73,13 +73,13 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
-        <VerInfo_Build>25</VerInfo_Build>
+        <VerInfo_Build>28</VerInfo_Build>
         <VerInfo_Release>1</VerInfo_Release>
         <DCC_CBuilderOutput>None</DCC_CBuilderOutput>
         <DCC_Description>Core 3.0.0 Корневые классы и утилиты</DCC_Description>
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <VerInfo_MajorVer>3</VerInfo_MajorVer>
-        <VerInfo_Keys>CompanyName=;FileVersion=3.0.1.25;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=3.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName);FileDescription=$(MSBuildProjectName);ProductName=$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileVersion=3.0.1.28;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=3.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName);FileDescription=$(MSBuildProjectName);ProductName=$(MSBuildProjectName)</VerInfo_Keys>
         <DCC_DUPLICATE_CTOR_DTOR>false</DCC_DUPLICATE_CTOR_DTOR>
         <Debugger_HostApplication>C:\XE\Projects\Device2\_exe\Debug\WorkProg.exe</Debugger_HostApplication>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
@@ -172,7 +172,6 @@
         <DCCReference Include="Fifo.Decoder.pas"/>
         <DCCReference Include="..\IndexBuffer.pas"/>
         <DCCReference Include="CFifo.pas"/>
-        <DCCReference Include="..\SDcardTools.pas"/>
         <DCCReference Include="VerySimpleLua\VerySimple.Lua.Lib.pas"/>
         <DCCReference Include="VerySimpleLua\VerySimple.Lua.pas"/>
         <DCCReference Include="Scintilla\DScintilla.pas"/>
@@ -195,6 +194,7 @@
         <DCCReference Include="WlanAPI\nduWinNT.pas"/>
         <DCCReference Include="WlanAPI\nduWlanAPI.pas"/>
         <DCCReference Include="WlanAPI\nduWlanTypes.pas"/>
+        <DCCReference Include="..\SDcardToolsAsync.pas"/>
         <None Include="..\Script.inc"/>
         <None Include="..\global.inc"/>
         <BuildConfiguration Include="Release">
@@ -250,6 +250,12 @@
                 </Excluded_Packages>
             </Delphi.Personality>
             <Deployment Version="3">
+                <DeployFile LocalName="..\_exe\Debug\Core.bpl" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>Core.bpl</RemoteName>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
                 <DeployFile LocalName="..\_exe\Debug\Core.bpl" Configuration="Debug" Class="ProjectOutput"/>
                 <DeployClass Name="AdditionalDebugSymbols">
                     <Platform Name="OSX32">
