--- a/Metrol/Metrol.dproj
+++ b/Metrol/Metrol.dproj
@@ -74,7 +74,7 @@
         <DCC_DebugDCUs>true</DCC_DebugDCUs>
         <DCC_RangeChecking>true</DCC_RangeChecking>
         <UsePackages>true</UsePackages>
-        <VerInfo_Keys>CompanyName=;FileVersion=3.2.0.4;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName);FileDescription=$(MSBuildProjectName);ProductName=$(MSBuildProjectName)</VerInfo_Keys>
+        <VerInfo_Keys>CompanyName=;FileVersion=3.2.0.5;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductVersion=1.0.0.0;Comments=;ProgramID=com.embarcadero.$(MSBuildProjectName);FileDescription=$(MSBuildProjectName);ProductName=$(MSBuildProjectName)</VerInfo_Keys>
         <VerInfo_MajorVer>3</VerInfo_MajorVer>
         <VerInfo_AutoIncVersion>true</VerInfo_AutoIncVersion>
         <Debugger_HostApplication>C:\XE\Projects\Device2\_exe\Debug\WorkProg.exe</Debugger_HostApplication>
@@ -86,7 +86,7 @@
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
         <AppDPIAwarenessMode>PerMonitor</AppDPIAwarenessMode>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
-        <VerInfo_Build>4</VerInfo_Build>
+        <VerInfo_Build>5</VerInfo_Build>
         <DCC_UsePackage>DBXSqliteDriver;RESTComponents;DataSnapServerMidas;DBXDb2Driver;DBXInterBaseDriver;vclactnband;vclFireDAC;emsclientfiredac;DataSnapFireDAC;tethering;svnui;JvGlobus;FireDACADSDriver;JvPluginSystem;DBXMSSQLDriver;JvMM;DatasnapConnectorsFreePascal;FireDACMSSQLDriver;vcltouch;JvBands;vcldb;bindcompfmx;svn;JvJans;DBXOracleDriver;JvNet;Core;inetdb;JvAppFrm;FmxTeeUI;emsedge;JvDotNetCtrls;FireDACIBDriver;fmx;fmxdae;vclib;JvWizards;FireDACDBXDriver;dbexpress;IndyCore;vclx;JvPageComps;dsnap;DataSnapCommon;emsclient;FireDACCommon;JvDB;RESTBackendComponents;DataSnapConnectors;VCLRESTComponents;soapserver;JclDeveloperTools;vclie;bindengine;DBXMySQLDriver;CloudService;FireDACOracleDriver;FireDACMySQLDriver;DBXFirebirdDriver;JvCmp;JvHMI;FireDACCommonODBC;FireDACCommonDriver;DataSnapClient;inet;bindcompdbx;IndyIPCommon;JvCustom;GR32_D;vcl;DBXSybaseASEDriver;IndyIPServer;JvXPCtrls;IndySystem;FireDACDb2Driver;dsnapcon;FireDACMSAccDriver;FireDACInfxDriver;fmxFireDAC;vclimg;TeeDB;FireDAC;Jcl;JvCore;emshosting;JvCrypt;FireDACSqliteDriver;FireDACPgDriver;ibmonitor;FireDACASADriver;DBXOdbcDriver;FireDACTDataDriver;FMXTee;soaprtl;DbxCommonDriver;JvDlgs;JvRuntimeDesign;ibxpress;Tee;JvManagedThreads;DataSnapServer;xmlrtl;DataSnapNativeClient;ibxbindings;fmxobj;FireDACDSDriver;soapmidas;rtl;emsserverresource;DbxClientDriver;vclwinx;DBXSybaseASADriver;JvTimeFramework;CustomIPTransport;vcldsnap;GR32_R;JvSystem;JvStdCtrls;bindcomp;appanalytics;DBXInformixDriver;IndyIPClient;bindcompvcl;TeeUI;JvDocking;dbxcds;VclSmp;JvPascalInterpreter;adortl;FireDACODBCDriver;JclVcl;DataSnapIndy10ServerTransport;DataSnapProviderClient;dsnapxml;dbrtl;FireDACMongoDBDriver;IndyProtocols;inetdbxpress;JvControls;JvPrintPreview;JclContainers;fmxase;CPortLibDXE;VirtualTreesR;$(DCC_UsePackage)</DCC_UsePackage>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
     </PropertyGroup>
@@ -128,39 +128,32 @@
         <DCCReference Include="..\VTEditors.pas"/>
         <DCCReference Include="MetrUAKI.pas">
             <Form>FormUAKI</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="UakiUI.pas">
             <Form>FrameUakiUI</Form>
-            <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="AutoMetr.Inclin.pas"/>
         <DCCReference Include="MetrInclinGraph.pas"/>
         <DCCReference Include="FrameInclinGraph.pas">
             <Form>FrmInclinGraph</Form>
-            <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="LuaInclin.Math.pas"/>
         <DCCReference Include="MetrUAKI.ToleranceForm.pas">
             <Form>FormUAKItolerance</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="MetrAccel.CheckForm.pas">
             <Form>FormAccelCheck</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="MetrInclin.TrrAndP2.pas"/>
         <DCCReference Include="MetrInclin.TrrAndP4.pas"/>
         <DCCReference Include="AutoMetr.GK.pas"/>
         <DCCReference Include="StolGKUI.pas">
             <Form>FormStolGK</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="UakiUI.Ten.pas">
             <Form>FrameUakiTEN</Form>
-            <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
         <DCCReference Include="MetrInclin.T12.pas"/>
@@ -168,30 +161,27 @@
         <DCCReference Include="MetrInclin.TrrAndP3.pas"/>
         <DCCReference Include="MetrAGK.pas">
             <Form>FormAGK</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="MetrInclin.Temp.Form.pas">
             <Form>FormMetrInclinT</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="MetrInclin.CheckForm.pas">
             <Form>FormInclinCheck</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="MetrGK.pas">
             <Form>FormGK</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
-        <DCCReference Include="MetrBKS.pas">
-            <Form>FormBKS</Form>
-            <FormType>dfm</FormType>
+        <DCCReference Include="MetrBKZ3.pas">
+            <Form>FormBKZ3</Form>
         </DCCReference>
         <DCCReference Include="MetrNNK2X.pas">
             <Form>FormNNK2X</Form>
-            <FormType>dfm</FormType>
         </DCCReference>
         <DCCReference Include="MetrNNK.pas">
             <Form>FormNNK</Form>
+        </DCCReference>
+        <DCCReference Include="MetrBKS.pas">
+            <Form>FormBKS</Form>
             <FormType>dfm</FormType>
         </DCCReference>
         <BuildConfiguration Include="Release">
