--- a/VCLControl/VCLControl3.dproj
+++ b/VCLControl/VCLControl3.dproj
@@ -76,6 +76,7 @@
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_ExeOutput>..\_exe\$(Config)\</DCC_ExeOutput>
         <UsePackages>true</UsePackages>
+        <Debugger_HostApplication>C:\XE\Projects\Device2\_exe\Debug\WorkProg.exe</Debugger_HostApplication>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
